Prevent text overflowing the scheduler spans

--- a/cdn_overlay/less/scheduler.less
+++ b/cdn_overlay/less/scheduler.less
@@ -82,6 +82,9 @@
 
                             width: 97%;
 
+                            overflow: hidden;
+                            text-overflow: ellipsis;
+
                             box-sizing: border-box;
                             background-color: rgb(136,221,136);
                             border: 1px solid #555;
